tests/ui/rust-2024/reserved-guarded-strings-lexing.stderr
error: prefix `Ñ` is unknown
  --> $DIR/reserved-guarded-strings-lexing.rs:88:12
   |
LL |     demo2!(Ñ"foo");
   |            ^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(Ñ "foo");
   |             +

error: prefix `Ñ` is unknown
  --> $DIR/reserved-guarded-strings-lexing.rs:90:12
   |
LL |     demo4!(Ñ#""#);
   |            ^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo4!(Ñ #""#);
   |             +

error: identifiers cannot contain emoji: `🙃`
  --> $DIR/reserved-guarded-strings-lexing.rs:94:12
   |
LL |     demo3!(🙃#"");
   |            ^^

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:33:12
   |
LL |     demo4!(### "foo");
   |            ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
note: the lint level is defined here
  --> $DIR/reserved-guarded-strings-lexing.rs:4:9
   |
LL | #![warn(rust_2024_guarded_string_incompatible_syntax)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo4!(# ## "foo");
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:36:12
   |
LL |     demo5!(#### "foo");
   |            ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo5!(# ### "foo");
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:36:13
   |
LL |     demo5!(#### "foo");
   |             ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo5!(## ## "foo");
   |              +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:41:12
   |
LL |     demo5!(### "foo"#);
   |            ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo5!(# ## "foo"#);
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:44:12
   |
LL |     demo7!(### "foo"###);
   |            ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo7!(# ## "foo"###);
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:44:21
   |
LL |     demo7!(### "foo"###);
   |                     ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo7!(### "foo"# ##);
   |                      +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:49:12
   |
LL |     demo9!(#### "foo"####);
   |            ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo9!(# ### "foo"####);
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:49:13
   |
LL |     demo9!(#### "foo"####);
   |             ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo9!(## ## "foo"####);
   |              +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:49:22
   |
LL |     demo9!(#### "foo"####);
   |                      ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo9!(#### "foo"# ###);
   |                       +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:49:23
   |
LL |     demo9!(#### "foo"####);
   |                       ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo9!(#### "foo"## ##);
   |                        +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:59:12
   |
LL |     demo5!(###"foo"#);
   |            ^^^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo5!(# ##"foo"#);
   |             +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:59:13
   |
LL |     demo5!(###"foo"#);
   |             ^^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo5!(## #"foo"#);
   |              +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:59:14
   |
LL |     demo5!(###"foo"#);
   |              ^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo5!(### "foo"#);
   |               +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:66:12
   |
LL |     demo5!(#"foo"###);
   |            ^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo5!(# "foo"###);
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:66:18
   |
LL |     demo5!(#"foo"###);
   |                  ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo5!(#"foo"# ##);
   |                   +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:71:17
   |
LL |     demo4!("foo"###);
   |                 ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo4!("foo"# ##);
   |                  +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:74:12
   |
LL |     demo6!(#"foo"####);
   |            ^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo6!(# "foo"####);
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:74:18
   |
LL |     demo6!(#"foo"####);
   |                  ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo6!(#"foo"# ###);
   |                   +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:74:19
   |
LL |     demo6!(#"foo"####);
   |                   ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo6!(#"foo"## ##);
   |                    +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:81:17
   |
LL |     demo5!("foo"####);
   |                 ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo5!("foo"# ###);
   |                  +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:81:18
   |
LL |     demo5!("foo"####);
   |                  ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo5!("foo"## ##);
   |                   +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:90:13
   |
LL |     demo4!(Ñ#""#);
   |             ^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo4!(Ñ# ""#);
   |              +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:94:13
   |
LL |     demo3!(🙃#"");
   |              ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see issue #123735 <https://github.com/rust-lang/rust/issues/123735>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo3!(🙃# "");
   |               +

error: aborting due to 3 previous errors; 23 warnings emitted

